fix layout issue

--- a/navbarPage/www/open_stat_font.css
+++ b/navbarPage/www/open_stat_font.css
@@ -63,17 +63,27 @@ code {
 
 .nav.nav-pills.nav-stacked > .active > a, .nav.nav-pills.nav-stacked > .active > a:hover {
     background-color: #d52b1e;
+    padding-left: 5px;
   }
+
+.col-sm-4 {
+    width: 30%;
+}
+
+.row {
+    margin-right: -45px;
+    margin-left: 0px;
+}
 
 .well {
     font-family: 'Dokdo', cursive;
-    min-height: 20px;
-    max-width: 200px;
-    padding: 19px;
+    min-height: 100px;
+    max-width: 300px;
+    padding: 1px;
     margin-bottom: 20px;
     background-color: #2c3e50;
     border: 1px solid #e3e3e3;
-    border-radius: 4px;
+    border-radius: 5px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
